<resources>
    <string name="app_name">iHealth-e</string>
    <string name="card_top_title">Na dúvida do que comer?</string>
    <string name="generate_button">Explorar</string>
    <string name="breakfast">Café da manhã</string>
    <string name="snack">Lanche</string>
    <string name="lunch_and_dinner">Almoço e Jantar</string>
    <string name="lowcarb">Baixo Carboidrato</string>
    <string name="high_protein">Alta Proteína</string>
    <string name="pre_workout">Pré-treino</string>
    <string name="post_workout">Pós-treino</string>
    <string name="vegan">Vegano</string>
    <string name="vegetarian">Vegetariano</string>
    <string name="fit_dessert">Sobremesas Fitness</string>
    <string name="favorites">Escolhidas para você!</string>
    <string name="category">Categoria:</string>
    <string name="time">Tempo:</string>
    <string name="ingredients">Ingredientes</string>
    <string name="instructions">Instruções</string>
    <string name="new_recipe">Nova receita</string>
    <string name="search">Buscar</string>
    <string name="search_hint">Buscar por nome ou ingrediente</string>
    <string name="random_recipe">Explore uma receita aleatória!</string>
    <string name="sugestion">Sugestões para você</string>
    <string name="search_results">Resultados da sua pesquisa</string>
    <string name="filter_by_category">Filtrar busca por categoria</string>
    <string name="edit">Editar</string>
    <string name="delete">Deletar</string>
    <string name="delete_list">Deletar lista</string>
    <string name="any_recipe_added">Você ainda não adicionou nenhuma receita</string>
    <string name="share">Compartilhar</string>
    <string name="all_categories">Tudo</string>
    <string name="version">Versão</string>
    <string name="privacy_policy">Política de Privacidade</string>
    <string name="home">Início</string>
    <string name="shopping">Compras</string>
    <string name="random">Aleatório</string>
    <string name="about">Sobre</string>
    <string name="responsibility_notice">Este app possui caráter exclusivamente informativo. Não substitui orientação médica ou nutricional. Consulte um profissional antes de tomar decisões relacionadas à sua saúde.</string>
    <string name="contact">Contato: contato.ihealthe@gmail.com</string>
    <string name="any_search_realized">Você ainda não realizou nenhuma busca</string>
    <string name="internet_connection">Sem conexão com a Internet</string>
    <string name="internet_off">Sua conexão com a internet parece estar desligada. Alguns recursos do app podem não funcionar corretamente.</string>
    <string name="no_recipe_avaliable">Nenhuma receita disponível</string>
    <string name="list_cleared">Lista deletada</string>
    <string name="preparation_time">Tempo de preparo:</string>
    <string name="macros_per_serving">Macronutrientes por porção:</string>
    <string name="protein">Proteínas:</string>
    <string name="carbohydrates">Carboidratos:</string>
    <string name="fat">Gorduras:</string>
    <string name="explore_ingredients_instructions">Veja os ingredientes e instruções no iHealth-e:</string>
    <string name="share_on">Compartilhar via:</string>
    <string name="explore_recipes">Confira essa receita no iHealth-e!</string>
    <string name="added_to_shopping">adicionado à lista de compras</string>
    <string name="removed_of_shopping">removido da lista de compras</string>
    <string name="version_num">Versao 1.0.6</string>
    <string name="explore_recipes_in_other_menus">Explore as receitas disponíveis navegando pelos outros menus</string>
    <string name="to_add_recipes">Para adicionar ingredientes</string>
    <string name="click_in">clique em: </string>
    <string name="search_something">Digite algo</string>
    <string name="search_for_your_recipes">Para começar a buscar receitas!\n\n</string>
    <string name="do_a_new_search">Explore com uma nova busca!</string>
    <string name="no_recipes_found">Nao encontramos nenhuma receita com este termo.</string>
    <string name="protein_sources">Fontes de proteína</string>
    <string name="carbohydrates_sources">Fonte de carboidrato</string>
    <string name="fat_sources">Fontes de gordura</string>
    <string name="dont_show_again">Não mostrar novamente</string>
    <string name="icons_meaning">Significado dos ícones</string>
</resources>
