<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:theme="@style/Theme.MacroUp.Splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".activity.MainActivity">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:layout_marginTop="50dp"
            android:background="@color/gray"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:backgroundTint="@color/white"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="10dp"
                    app:cardCornerRadius="10dp"
                    android:elevation="20dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:id="@+id/card_view_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:text="@string/card_top_title"
                            />

                        <TextView
                            android:id="@+id/card_view_subtitle"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="@string/random_recipe"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/card_view_button"
                            android:layout_width="180dp"
                            android:layout_height="39dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="19dp"
                            android:text="@string/generate_button"
                            android:background="@drawable/button_background"
                            android:textColor="@color/white"
                            android:textAllCaps="false"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            />

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="120dp"
                            android:src="@drawable/img_cardview_food"
                            android:layout_gravity="end"
                            android:layout_marginTop="-60dp"
                            android:layout_marginEnd="-30dp"
                            />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    >

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/categoryRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginHorizontal="10dp"
                        android:orientation="horizontal"
                        android:scrollbars="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/item_category"
                        />

                    <TextView
                        android:id="@+id/saladExpress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="22dp"
                        android:text="@string/favorites"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/categoryRecyclerView"
                        app:layout_constraintTop_toBottomOf="@+id/categoryRecyclerView" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/homeRecipesRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:layout_marginTop="20dp"
                        tools:listitem="@layout/item_recipes_home"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintStart_toStartOf="@id/saladExpress"
                        app:layout_constraintTop_toBottomOf="@+id/saladExpress"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:itemIconTint="@color/bottom_nav_color_selector"
        app:itemTextColor="@color/bottom_nav_color_selector"
        app:itemTextAppearanceActive="@style/BottomNavTextStyle"
        app:itemTextAppearanceInactive="@style/BottomNavTextStyle"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>